--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,8 @@ main .container .form form .input_container #submit {
   color: white;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  -webkit-appearance: none;
+
 }
 
 main .container .form p {
