--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,7 @@ main .container .form form .input_container #submit {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   -webkit-appearance: none;
+  box-shadow:none;
 
 }
 
