--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ main .container .form form {
   background-color: white;
   padding: 1.2em;
   border-radius: 5px;
-  box-shadow: 0px 4px #b9595a;
+  /*box-shadow: 0px 4px #b9595a; */
 }
 
 main .container .form #free {
